--- a/sentiment_analysis.ipynb
+++ b/sentiment_analysis.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "import pandas as pd\n",
@@ -19,22 +19,14 @@
     "import seaborn as sns"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T09:13:39.194922Z",
-     "start_time": "2023-11-03T09:13:39.192252Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
-    "collapsed": true,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T09:13:39.741781Z",
-     "start_time": "2023-11-03T09:13:39.739132Z"
-    }
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -43,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "cities_df = dict()\n",
@@ -51,16 +43,12 @@
     "    cities_df[city] = pd.read_csv(\"./data/listings_{c}.csv\".format(c=city))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T09:13:42.308793Z",
-     "start_time": "2023-11-03T09:13:40.160374Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "outputs": [],
    "source": [
     "cities_review_df = dict()\n",
@@ -68,76 +56,13 @@
     "    cities_review_df[city] = pd.read_csv(\"./data/reviews_{c}.csv\".format(c=city))"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2023-11-03T09:14:28.934742Z",
-     "start_time": "2023-11-03T09:14:22.944212Z"
-    }
+    "collapsed": false
    }
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/mkurumi/anaconda3/envs/pythonProject/lib/python3.10/site-packages/transformers/pipelines/text_classification.py:105: UserWarning: `return_all_scores` is now deprecated,  if want a similar functionality use `top_k=None` instead of `return_all_scores=True` or `top_k=1` instead of `return_all_scores=False`.\n",
-      "  warnings.warn(\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Processing comment 1 out of 451682\n",
-      "Processing comment 10001 out of 451682\n",
-      "Processing comment 20001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 30001 out of 451682\n",
-      "Processing comment 40001 out of 451682\n",
-      "Processing comment 50001 out of 451682\n",
-      "Processing comment 60001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 70001 out of 451682\n",
-      "Processing comment 80001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 90001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 100001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 110001 out of 451682\n",
-      "Processing comment 120001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 130001 out of 451682\n",
-      "Processing comment 140001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 150001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 160001 out of 451682\n",
-      "Processing comment 170001 out of 451682\n",
-      "Processing comment 180001 out of 451682\n",
-      "Processing comment 190001 out of 451682\n",
-      "Processing comment 200001 out of 451682\n",
-      "Processing comment 210001 out of 451682\n",
-      "Processing comment 220001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 230001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 240001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 250001 out of 451682\n",
-      "Processing comment 260001 out of 451682\n",
-      "Error: 'float' object is not iterable\n",
-      "Processing comment 270001 out of 451682\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd\n",
     "from transformers import pipeline, DistilBertTokenizer\n",
@@ -186,11 +111,18 @@
     "cities_review_df[\"tokyo\"].to_csv(\"./data/reviews_tokyo_sentiment.csv\", index=False)\n"
    ],
    "metadata": {
-    "collapsed": false,
-    "is_executing": true,
-    "ExecuteTime": {
-     "start_time": "2023-11-03T11:13:35.639803Z"
-    }
+    "collapsed": false
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "print(cities_review_df[\"tokyo\"].head())\n"
+   ],
+   "metadata": {
+    "collapsed": false
    }
   },
   {
